bundles/kgw-dr/10-kgw-dr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: healthz
  namespace: kgateway-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kgw
      namespace: kgateway-system
  rules:
    - filters:
        - extensionRef:
            group: gateway.kgateway.dev
            kind: DirectResponse
            name: healthz
          type: ExtensionRef
      matches:
        - path:
            type: Exact
            value: /healthz
